--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 = My Shop
 
+Following [Microservices in .NET, 2nd](https://manning.com/books/microservices-in-net-core-second-edition)
+
 ```
 docker build . -t shopping-cart
 docker run --name shopping-cart --rm -p 5000:80 shopping-cart
