--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,11 @@
 Following [Microservices in .NET, 2nd](https://manning.com/books/microservices-in-net-core-second-edition)
 
 ```
+# Docker
 docker build . -t shopping-cart
 docker run --name shopping-cart --rm -p 5000:80 shopping-cart
+
+# Kubernetes
+kubectl apply -f shopping-cart.yaml
+kubectl delete -f shopping-cart.yaml
 ```
